# aos-code

./: .gitignore  CMakeLists.txt  README.md
basics/01-fork/: run.sh
basics/02-exec/: exec.c  exec.md
basics/03-signal/: receiver-mask.c  receiver.c  signal.md
basics/05-fifo/: reader.c
basics/fork/: fork.c  fork.md
ipc/03-signal/: receiver-timewait.c  sender.c
ipc/04-pipes/: pipe.c
ipc/05-fifo/: writer.c
ipc/es01-signals/: instr.md  main.c
ipc/es02-pipe/: README.md  es02.c
ipc/es03-fifo/: README.md  es03.c
ipc/es04-message_queues/: README.md  es04_reader.c  es04_writer.c
ipc/es05-shared_memory/: README.md
